Removed depency on api.jquery.js. The include of api.jquery.js in some themes after the shipping calculator's code was creating too many problems.

--- a/README.textile
+++ b/README.textile
@@ -2,11 +2,10 @@ To use in Shopify to add a shipping rates calculator to the cart page. Relies on
 
 h2. Dependencies
 
-jQuery > 1.3
+jQuery >= 1.4
 jQuery template plugin ("http://api.jquery.com/category/plugins/templates":http://api.jquery.com/category/plugins/templates)
 shopify_common.js
 countries.js
-api.jquery.js
 
 h2. Installation
 
