--- a/README.textile
+++ b/README.textile
@@ -3,7 +3,7 @@ To use in Shopify to add a shipping rates calculator to the cart page. Relies on
 h2. Dependencies
 
 jQuery >= 1.4
-jQuery template plugin ("http://api.jquery.com/category/plugins/templates":http://api.jquery.com/category/plugins/templates)
+Liquid.js ("https://github.com/darthapo/liquid.js":https://github.com/darthapo/liquid.js)
 shopify_common.js
 countries.js
 
